--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ nav {
 .svg1 {
   height: 600px;
   width: 600px;
-  background: url("../../public/res/rect.svg");
+  background: url("../res/rect.svg");
   background-size: cover;
   opacity: 0.4;
   transform: rotate(-60deg);
@@ -236,7 +236,7 @@ nav {
 .svg2 {
   height: 400px;
   width: 400px;
-  background: url("../../public/res/rect.svg");
+  background: url("../res/rect.svg");
   background-size: cover;
   bottom: -130px;
   position: absolute;
@@ -246,7 +246,7 @@ nav {
 .svg3 {
   height: 300px;
   width: 300px;
-  background: url("../../public/res/rect.svg");
+  background: url("../res/rect.svg");
   background-size: cover;
   transform: rotate(-60deg);
   position: absolute;
@@ -257,7 +257,7 @@ nav {
 .svg4 {
   height: 500px;
   width: 500px;
-  background: url("../../public/res/rect.svg");
+  background: url("../res/rect.svg");
   background-size: cover;
   opacity: 0.5;
   position: absolute;
@@ -456,7 +456,7 @@ nav {
   z-index: 99;
   bottom: 2.5rem;
   right: 2.5rem;
-  background: url("../../public/res/aboutImg.png") no-repeat center;
+  background: url("../res/myImg.jpg") no-repeat center;
   background-size: cover;
 }
 
