--- a/css/style.css
+++ b/css/style.css
@@ -909,6 +909,7 @@ footer {
   width: 100%;
   position: absolute;
   bottom: 0;
+  left:0;
   text-align: center;
   color: #777777;
   background: #000;
